Refresh filters and game detail UX

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "format": "prettier --write \"src/**/*.{js,jsx,css,md}\"",
     "test": "echo \"No tests specified yet\"",
     "check": "npm run lint && npm run format -- --check && npm run build",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "lint-staged": {
     "*.{js,jsx}": [
@@ -41,6 +41,7 @@
     "@vitejs/plugin-react": "^5.1.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.9.6",
     "vite": "^7.2.2"
   },
   "devDependencies": {
